crates/test-generator/tests/snapshots/tsx/test_generated_export_statement.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
export const exported = value7;

AST:
(program
  (export_statement
    declaration: (lexical_declaration
      (variable_declarator
        name: (identifier "exported")
        value: (identifier "value7")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:14 to 1:22 }, name: "exported", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:25 to 1:31 }, name: "value7", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
