crates/test-generator/tests/snapshots/tsx/test_generated_expression.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
var + 1

AST:
(program
  (ERROR)
  (expression_statement
    (unary_expression
      argument: (number "1")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
