crates/test-generator/tests/snapshots/tsx/test_generated_for_in_statement.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
for (const key in obj) { console.log(key); }

AST:
(program
  (for_in_statement
    left: (identifier "key")
    right: (identifier "obj")
    body: (statement_block
      (expression_statement
        (call_expression
          function: (member_expression
            object: (identifier "console")
            property: (property_identifier "log")
          )
          arguments: (arguments
            (identifier "key")
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:12 to 1:15 }, name: "key", kind: Identifier, context: None },
        Usage { position: { 1:19 to 1:22 }, name: "obj", kind: Identifier, context: None },
        Usage { position: { 1:26 to 1:33 }, name: "console", kind: Identifier, context: Some("call_expression") },
        Usage { position: { 1:34 to 1:37 }, name: "log", kind: FieldExpression, context: None },
        Usage { position: { 1:38 to 1:41 }, name: "key", kind: Identifier, context: Some("call_expression") },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
