crates/test-generator/tests/snapshots/tsx/test_generated_for_statement.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
for (let i1 = 0; i1 < arr1.length; i1++) { const item = arr1[i1]; }

AST:
(program
  (for_statement
    initializer: (lexical_declaration
      (variable_declarator
        name: (identifier "i1")
        value: (number "0")
      )
    )
    condition: (binary_expression
      left: (identifier "i1")
      right: (member_expression
        object: (identifier "arr1")
        property: (property_identifier "length")
      )
    )
    increment: (update_expression
      argument: (identifier "i1")
    )
    body: (statement_block
      (lexical_declaration
        (variable_declarator
          name: (identifier "item")
          value: (subscript_expression
            object: (identifier "arr1")
            index: (identifier "i1")
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:10 to 1:12 }, name: "i1", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:50 to 1:54 }, name: "item", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:18 to 1:20 }, name: "i1", kind: Identifier, context: None },
        Usage { position: { 1:23 to 1:27 }, name: "arr1", kind: Identifier, context: None },
        Usage { position: { 1:28 to 1:34 }, name: "length", kind: FieldExpression, context: None },
        Usage { position: { 1:36 to 1:38 }, name: "i1", kind: Identifier, context: None },
        Usage { position: { 1:57 to 1:61 }, name: "arr1", kind: Identifier, context: None },
        Usage { position: { 1:62 to 1:64 }, name: "i1", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
