crates/test-generator/tests/snapshots/tsx/test_generated_function_expression.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
function(param1: number) { const local1 = param1; return local1 + 1; }

AST:
(program
  (expression_statement
    (function_expression
      parameters: (formal_parameters
        (required_parameter
          pattern: (identifier "param1")
          type: (type_annotation
            (predefined_type "number")
          )
        )
      )
      body: (statement_block
        (lexical_declaration
          (variable_declarator
            name: (identifier "local1")
            value: (identifier "param1")
          )
        )
        (return_statement
          (binary_expression
            left: (identifier "local1")
            right: (number "1")
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:10 to 1:16 }, name: "param1", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:34 to 1:40 }, name: "local1", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:43 to 1:49 }, name: "param1", kind: Identifier, context: None },
        Usage { position: { 1:58 to 1:64 }, name: "local1", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
